Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6266

kstrtoul does not exist before 2.6.39

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0, Lustre 2.5.4
    • Lustre 2.7.0, Lustre 2.5.4
    • None
    • 3
    • 17562

      The kstrtoul() function was only added to the upstream kernel in 2.6.39 (commit v2.6.38-6934-g33ee3b2). While it is backported to RHEL6 2.6.32 kernels, it does not exist for vanilla kernels before that point.

      The patch from http://review.whamcloud.com/5700 "LU-1778 llite: fix inconsistencies of root squash feature" added uses of kstrtoul() to Lustre that break the build for older kernels. While it would be possible to convert those calls over to simple_strtoul() that function is deprecated in newer kernels, and checkpatch.pl will generate a warning, so using kstrtoul() is the right thing for newer kernels.

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: